# .escrow

./: .gitignore  LICENSE-MIT  README.md
.cursor/: scratchpad.md
backend/: go.mod
backend/internal/api/: handlers.go  routes.go
backend/internal/blockchain/: client.go
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/models/: milestone.go
contracts/: Cargo.toml  escrow_contract.wasm  escrow_contract_v5.contract  escrow_contract_v5.wasm
contracts/escrow/: Cargo.toml  README.md
contracts/escrow/src/: lib.rs
contracts/lib/src/: lib.rs
docs/: API_REFERENCE.md  ARCHITECTURE_REDESIGN_PLAN.md  DEPLOYMENT_GUIDE.md  TESTING_GUIDE.md  USDT_INTEGRATION_PRODUCTION_PLAN.md  security-review.md
frontend/: .eslintrc.json  get-contract-address.md  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/Layout/: index.tsx
frontend/src/components/Notifications/: index.tsx
frontend/src/components/OnboardingTour/: index.tsx
frontend/src/components/SearchBar/: index.tsx
frontend/src/components/SearchFilters/: index.tsx
frontend/src/components/Sidebar/: index.tsx
frontend/src/components/WelcomeGuide/: index.tsx
frontend/src/config/: contract.ts  escrow_contract.json
frontend/src/hooks/: useEscrowContract.ts  useLocalStorage.ts  usePolkadotApi.ts  usePolkadotExtension.ts  useWalletContext.tsx
frontend/src/pages/ConnectWallet/: index.tsx
frontend/src/pages/CreateEscrow/: index.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/EscrowDetails/: index.tsx
frontend/src/store/slices/: walletSlice.ts
frontend/src/styles/: index.css  theme.ts
frontend/src/test/: setup.ts  utils.tsx
frontend/src/test/components/: SearchBar.test.tsx  (+2 more)
(+3 files in other folders)
