[package]
name = "escrow_contract"
version = "0.1.0"
authors = ["Samuel Arogbonlo <sbayo971@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
ink_e2e = "5.1.1"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []